k8s/deployments/base/orders-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: foodhub-orders
  labels:
    app: foodhub-orders
spec:
  type: ClusterIP
  ports:
    - name: http
      port: 8084
      targetPort: 8084
      protocol: TCP
  selector:
    app: foodhub-orders
