k8s/deployments/base/products-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: foodhub-products
  labels:
    app: foodhub-products
spec:
  type: ClusterIP
  ports:
    - name: http
      port: 8083
      targetPort: 8083
      protocol: TCP
  selector:
    app: foodhub-products
