k8s/deployments/base/users-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: foodhub-users
  labels:
    app: foodhub-users
spec:
  type: ClusterIP
  ports:
    - name: http
      port: 8082
      targetPort: 8082
      protocol: TCP
  selector:
    app: foodhub-users
